# AIBrowserAgent

./: .env.example  .gitignore  README.md  agent.py  agent_graph.py  browser_tools.py  instruction_agent_graph.py  live_browser.py  llm_claude.py  main.py  pyproject.toml  requirements.txt  run.py  setup.sh
data/: sites_to_test.csv
docs/: HEADLESS_EVALUATION.md  README.md  ROADMAP.md
src/: __init__.py  agent_graph.py  browser.py  config.py  evaluate_headless.py  extractors.py  generate_headless_doc.py  hitl.py  logger.py  nl_intent.py  prompt_to_url.py
src/brave-search-agent/: agent.py  requirements.txt
src/exa-agent/: README.md  exa_agent.py  nl_agent.py  requirements.txt  results.csv
src/firecrawl-agent/: .env.example  agent.py  requirements.txt
src/firecrawl-agent/outputs/: 20260309T191420Z_my-uic-edu.json  20260309T191815Z_my-uic-edu.json  20260309T192720Z_my-uic-edu.json  20260309T192921Z_my-uic-edu.json  20260309T193234Z_united-com.json  20260309T193457Z_united-com.json  20260309T193621Z_learning-postman-com.json  20260309T194006Z_amazon-com.json  20260309T201925Z_amazon-com.json  20260309T202057Z_learning-postman-com.json  20260309T202130Z_united-com.json  20260309T202151Z_my-uic-edu.json  20260309T202313Z_zillow-com.json  20260309T202436Z_news-ycombinator-com.json  (+11 more)
src/serpapi-agent/: .gitignore  README.md  agent.py  batch_run.py  browser_agent.py  config.py  headless_eval.py  nl_agent.py  requirements.txt  run_hitl.py  unified_agent.py
src/tavily-agent/: Tavily_Title_Descrip.py  agent.py  batch_run.py  nl_agent.py  requirements.txt  urls.txt
(+17 files in other folders)
