[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "webagent"
version = "0.1.0"
description = "LangGraph browser agent with SoM + Human-in-the-Loop"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",
    "playwright>=1.44.0",
    "pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
